@@ -1,0 +1,4 @@
+#define TUXMATH_ICON                       104
+TUXMATH_ICON			ICON "../data/images/tuxmath.ico"
+#define TUXMATH_ICON                       104
+TUXMATH_ICON			ICON "../data/images/tuxmath.ico"
