@@ -1,5 +1,11 @@
 changelog for "tuxmath"
 
+NOTE: Tuxmath is under heavy construction and currently does
+not compile - the menu system is being overhauled with code from
+tuxtype. Please checkout revision 61 if you need something
+that actually builds and works - i.e.:
+
+svn checkout -r 61 https://svn.tux4kids.net/tuxmath/
 
 2006.Nov.17  (https://svn.tux4kids.net/tuxmath/ - revision 61)
   Version 1.0.2
